--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "dev": "vite --port=3001",
+    "dev": "vite --host 0.0.0.0 --port=30097",
     "build": "vite build",
     "serve": "vite preview",
     "start": "vite"
